--- a/gpslogger/src/main/res/layout/activity_simple_main.xml
+++ b/gpslogger/src/main/res/layout/activity_simple_main.xml
@@ -15,41 +15,18 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
 
-    <EditText
-        android:id="@+id/simple_latlong_text"
+    <FrameLayout
+        android:id="@+id/simple_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/simple_btnActionProcess"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:background="@null"
-        android:editable="false"
-        android:fontFamily="sans-serif"
-        android:gravity="center"
-        android:selectAllOnFocus="true"
-        android:textIsSelectable="true"
-        android:textSize="@dimen/simpleview_latlong_textsize"
-        android:textStyle="italic" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="55dp"></FrameLayout>
 
-    <com.dd.processbutton.iml.ActionProcessButton
-        android:id="@+id/simple_btnActionProcess"
+    <Button
+        android:id="@+id/buttosimple_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:width="240dp"
-        android:text="@string/btn_start_logging"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        custom:pb_colorComplete="@color/green_complete"
-        custom:pb_colorError="@color/red_error"
-        custom:pb_colorNormal="@color/accentColorComplementary"
-        custom:pb_colorPressed="@color/blue_pressed"
-        custom:pb_colorProgress="@color/purple_progress"
-        custom:pb_textComplete="Success"
-        custom:pb_textError="Error"
-        custom:pb_textProgress="Loading" />
+        android:text="Test Upload" />
 
 </RelativeLayout>
